--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,14 @@
 @import './base.css';
 
+body {
+  background-color: black;
+}
+
 #app {
   /* max-width: 1280px;
   margin: 0 auto; */
   padding: 2rem; 
   font-weight: normal;
-  background-color: black;
 }
 
 a,
