--- a/PiniaApp/src/assets/main.css
+++ b/PiniaApp/src/assets/main.css
@@ -1,10 +1,11 @@
-@import './base.css';
+body {
+  background-color: black;
+}
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
+  /* max-width: 1280px;
+  margin: 0 auto; */
+  padding: 2rem; 
   font-weight: normal;
 }
 
@@ -22,7 +23,7 @@ a,
 }
 
 @media (min-width: 1024px) {
-  body {
+  /* body {
     display: flex;
     place-items: center;
   }
@@ -31,5 +32,5 @@ a,
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
-  }
+  } */
 }
